# towl

./: .gitignore  .towl.toml.example  Cargo.toml  LICENSE  README.md  build.rs  devbox.json  rust-toolchain.toml
.github/workflows/: build.yml  docs.yml  publish.yml
docs/: book.toml
docs/book/: 404.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: config.html  errors.html  github.html  llm.html  output.html  overview.html  parser.html  processor.html  scanner.html  tui.html  types.html
docs/book/getting-started/: configuration.html  installation.html  quickstart.html
docs/book/guides/: ai-analysis.html  filtering.html  output-formats.html  scanning.html  tui.html
docs/book/reference/: architecture.html  ci-cd.html  contributing.html  security.html
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: config.md  errors.md  github.md  llm.md  output.md  overview.md  parser.md  processor.md  scanner.md  tui.md  types.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guides/: ai-analysis.md  filtering.md  output-formats.md  scanning.md  tui.md
docs/src/reference/: architecture.md  ci-cd.md  contributing.md  security.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_config.rs  regex_patterns.rs
src/: main.rs
src/lib/: mod.rs
src/lib/cli/: mod.rs
src/lib/comment/: error.rs  mod.rs  todo.rs
src/lib/config/: config.rs  defaults.rs  display.rs  error.rs  git.rs  mod.rs  newtypes.proptest-regressions  newtypes.rs  types.proptest-regressions  types.rs  validation.rs
src/lib/error/: mod.rs
src/lib/github/: client.rs  error.rs  mod.rs  types.rs
src/lib/llm/: analyse.rs  claude.rs  cli.rs  error.rs  mod.rs  openai.rs  prompt.rs  types.rs
src/lib/output/: error.rs  mod.rs
src/lib/output/formatter/: error.rs  mod.rs
src/lib/output/formatter/formatters/: csv.rs  json.rs  markdown.rs  mod.rs  table.rs  toml.rs
src/lib/output/writer/: error.rs  mod.rs
src/lib/output/writer/writers/: file.proptest-regressions  file.rs  stdout.rs
src/lib/parser/: context.rs  error.rs  mod.rs  parser.rs  pattern.rs  types.rs
src/lib/processor/: error.rs  mod.rs  types.proptest-regressions  types.rs
src/lib/scanner/: error.rs  limits.rs  mod.rs  scanner.rs  types.rs  walker.rs
src/lib/tui/: app.proptest-regressions  app.rs  error.rs  input.rs  mod.rs  render.rs
src/lib/tui/snapshots/: towl__tui__render__tests__snapshot_browse_empty.snap  towl__tui__render__tests__snapshot_browse_mode.snap  towl__tui__render__tests__snapshot_confirm_popup.snap  towl__tui__render__tests__snapshot_creating_popup.snap  towl__tui__render__tests__snapshot_done_success.snap  towl__tui__render__tests__snapshot_done_with_errors.snap  towl__tui__render__tests__snapshot_peek_popup.snap
tests/: lib.rs
tests/fixtures/: mod.rs
tests/integration/: cli_commands.rs  error_scenarios.rs  mod.rs
tests/property/: mod.rs  path_validation.rs
