[package]
name = "towl"
version = "0.3.6"
authors = ["Jason Ridgway-Taylor <jason@glottologist.co.uk>"]
description = "A fast CLI tool to scan codebases for TODO comments and output them in multiple formats"
license = "MIT"
keywords = ["todo", "comments", "code-analysis", "development-tools"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/towl"
homepage = "https://glottologist.github.io/towl/"
repository = "https://github.com/glottologist/towl"
readme = "README.md"
edition = "2021"
rust-version = "1.75"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "towl"
path = "src/bin/towl.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"
thiserror = "1.0"
secrecy = { version = "0.10", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ignore = "0.4.23"
regex = "1.11.2"
tempfile = "3.8"
octocrab = "0.44"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.29"
crossterm = "0.28"
futures = "0.3"
which = "8"
backon = "1.5.2"

[dev-dependencies]
rstest = "0.18"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.39"
